--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+
+.actionbutton {
+  padding: 3px;
+  color: white;
+  font-size: 10px;
+  border-radius: 5px;
+  margin: 0px 5px;
+}
+
+.delete {
+  background-color: red;
+}
+
+.accept {
+  background-color: green;
+}
